--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,3 +28,7 @@ set -g status-right '#[fg=Cyan]#S #[fg=white]%a %d %b %R'
  bind-key h select-pane -L
  unbind-key l
  bind-key l select-pane -R
+ 
+ # ctrl+left/right cycles thru windows
+ bind-key -n C-right next
+ bind-key -n C-left prev
